# smalloc

./: .gitignore  CMakeLists.txt  README
include/: smalloc.h
src/: .smalloc.c.swp  CMakeLists.txt  Makefile  smalloc.c
tests/: CMakeLists.txt  test_00.c  test_01.c  test_02.c
